Bug 478144 - KWin effects do not display properly on the PinePhone
Summary: KWin effects do not display properly on the PinePhone
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-06 05:34 UTC by Devin Lin
Modified: 2023-12-06 23:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Logs from KWin (5.05 KB, text/plain)
2023-12-06 05:34 UTC, Devin Lin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Devin Lin 2023-12-06 05:34:23 UTC
Created attachment 163933 [details]
Logs from KWin

SUMMARY
Opening a KWin effect causes the screen to go white. There seems to be some shader error in the logs.

STEPS TO REPRODUCE
1. Open the task switcher in Plasma Mobile (implemented as a KWin effect)

OBSERVED RESULT
The screen goes white

EXPECTED RESULT
The effect being visible

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master
KDE Plasma Version: git master
KDE Frameworks Version: git master
Qt Version: 6.6

ADDITIONAL INFORMATION
See logs attached.

As a sidenote, there are different issues on the OnePlus 6 (the screen goes black instead)
Comment 1 Bug Janitor Service 2023-12-06 08:25:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4749
Comment 2 Zamundaaa 2023-12-06 23:30:00 UTC
Git commit b76c793d9585d57eeff45eaf7e2f7f661d03da0d by Xaver Hugl.
Committed on 07/12/2023 at 00:22.
Pushed by zamundaaa into branch 'master'.

opengl/glshadermanager: work around GLES2 not supporting mix with bvec

M  +14   -2    src/opengl/glshadermanager.cpp

https://invent.kde.org/plasma/kwin/-/commit/b76c793d9585d57eeff45eaf7e2f7f661d03da0d