opengl/glshadermanager: work around GLES2 not supporting mix with bvec

BUG: 478144